adds a ton of region template options

--- a/templates/Regions/~global.template.options.hbs
+++ b/templates/Regions/~global.template.options.hbs
@@ -130,70 +130,150 @@
         "NAME": "REGION_TEXT_COLOR_PRIMARY",
         "DISPLAY_NAME": "Primary",
         "DISPLAY_SEQUENCE": 1,
-        "CSS_CLASSES": "text-primary",
+        "CSS_CLASSES": "ft-color text-primary",
         "HELP_TEXT": ""
       },
       {
         "NAME": "REGION_TEXT_COLOR_SECONDARY",
         "DISPLAY_NAME": "Secondary",
         "DISPLAY_SEQUENCE": 2,
-        "CSS_CLASSES": "text-secondary",
+        "CSS_CLASSES": "ft-color text-secondary",
         "HELP_TEXT": ""
       },
       {
         "NAME": "REGION_TEXT_COLOR_SUCCESS",
         "DISPLAY_NAME": "Success",
         "DISPLAY_SEQUENCE": 3,
-        "CSS_CLASSES": "text-success",
+        "CSS_CLASSES": "ft-color text-success",
         "HELP_TEXT": ""
       },
       {
         "NAME": "REGION_TEXT_COLOR_DANGER",
         "DISPLAY_NAME": "Danger",
         "DISPLAY_SEQUENCE": 4,
-        "CSS_CLASSES": "text-danger",
+        "CSS_CLASSES": "ft-color text-danger",
         "HELP_TEXT": ""
       },
       {
         "NAME": "REGION_TEXT_COLOR_WARNING",
         "DISPLAY_NAME": "Warning",
         "DISPLAY_SEQUENCE": 5,
-        "CSS_CLASSES": "text-warning",
+        "CSS_CLASSES": "ft-color text-warning",
         "HELP_TEXT": ""
       },
       {
         "NAME": "REGION_TEXT_COLOR_INFO",
         "DISPLAY_NAME": "Info",
         "DISPLAY_SEQUENCE": 6,
-        "CSS_CLASSES": "text-info",
+        "CSS_CLASSES": "ft-color text-info",
         "HELP_TEXT": ""
       },
       {
         "NAME": "REGION_TEXT_COLOR_LIGHT",
         "DISPLAY_NAME": "Light",
         "DISPLAY_SEQUENCE": 7,
-        "CSS_CLASSES": "text-light",
+        "CSS_CLASSES": "ft-color text-light",
         "HELP_TEXT": ""
       },
       {
         "NAME": "REGION_TEXT_COLOR_DARK",
         "DISPLAY_NAME": "Dark",
         "DISPLAY_SEQUENCE": 8,
-        "CSS_CLASSES": "text-dark",
+        "CSS_CLASSES": "ft-color text-dark",
         "HELP_TEXT": ""
       },
       {
         "NAME": "REGION_TEXT_COLOR_MUTED",
         "DISPLAY_NAME": "Muted",
         "DISPLAY_SEQUENCE": 9,
-        "CSS_CLASSES": "text-muted",
+        "CSS_CLASSES": "ft-color text-muted",
         "HELP_TEXT": ""
       },
       {
         "NAME": "REGION_TEXT_COLOR_WHITE",
         "DISPLAY_NAME": "White",
         "DISPLAY_SEQUENCE": 10,
-        "CSS_CLASSES": "text-white",
+        "CSS_CLASSES": "ft-color text-white",
+        "HELP_TEXT": ""
+      }
+    ]
+  },
+  {
+    "NAME": "REGION_TEXT_COLOR_TITLE",
+    "DISPLAY_NAME": "Text Color - Title",
+    "DISPLAY_SEQUENCE": 805,
+    "HELP_TEXT": "Convey meaning through color with a handful of color utility classes. Includes support for styling links with hover states, too.",
+    "NULL_TEXT": "Default",
+    "IS_ADVANCED": "Y",
+    "TEMPLATE_OPTIONS": [
+      {
+        "NAME": "TEXT_COLOR_TITLE_PRIMARY",
+        "DISPLAY_NAME": "Primary",
+        "DISPLAY_SEQUENCE": 1,
+        "CSS_CLASSES": "ft-color-title-primary",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "TEXT_COLOR_TITLE_SECONDARY",
+        "DISPLAY_NAME": "Secondary",
+        "DISPLAY_SEQUENCE": 2,
+        "CSS_CLASSES": "ft-color-title-secondary",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "TEXT_COLOR_TITLE_SUCCESS",
+        "DISPLAY_NAME": "Success",
+        "DISPLAY_SEQUENCE": 3,
+        "CSS_CLASSES": "ft-color-title-success",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "TEXT_COLOR_TITLE_DANGER",
+        "DISPLAY_NAME": "Danger",
+        "DISPLAY_SEQUENCE": 4,
+        "CSS_CLASSES": "ft-color-title-danger",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "TEXT_COLOR_TITLE_WARNING",
+        "DISPLAY_NAME": "Warning",
+        "DISPLAY_SEQUENCE": 5,
+        "CSS_CLASSES": "ft-color-title-warning",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "TEXT_COLOR_TITLE_INFO",
+        "DISPLAY_NAME": "Info",
+        "DISPLAY_SEQUENCE": 6,
+        "CSS_CLASSES": "ft-color-title-info",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "TEXT_COLOR_TITLE_LIGHT",
+        "DISPLAY_NAME": "Light",
+        "DISPLAY_SEQUENCE": 7,
+        "CSS_CLASSES": "ft-color-title-light",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "TEXT_COLOR_TITLE_DARK",
+        "DISPLAY_NAME": "Dark",
+        "DISPLAY_SEQUENCE": 8,
+        "CSS_CLASSES": "ft-color-title-dark",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "TEXT_COLOR_TITLE_MUTED",
+        "DISPLAY_NAME": "Muted",
+        "DISPLAY_SEQUENCE": 9,
+        "CSS_CLASSES": "ft-color-title-muted",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "TEXT_COLOR_TITLE_WHITE",
+        "DISPLAY_NAME": "White",
+        "DISPLAY_SEQUENCE": 10,
+        "CSS_CLASSES": "ft-color-title-white",
         "HELP_TEXT": ""
       }
     ]
@@ -381,7 +461,7 @@
   },
   {
     "NAME": "REGION_MARGIN_BOTTOM",
-    "DISPLAY_NAME": "Margin Bottom",
+    "DISPLAY_NAME": "------ Bottom",
     "DISPLAY_SEQUENCE": 901,
     "HELP_TEXT": "",
     "NULL_TEXT": "Default",
@@ -433,7 +513,7 @@
   },
   {
     "NAME": "REGION_MARGIN_LEFT",
-    "DISPLAY_NAME": "Margin Left",
+    "DISPLAY_NAME": "------ Left",
     "DISPLAY_SEQUENCE": 902,
     "HELP_TEXT": "",
     "NULL_TEXT": "Default",
@@ -485,7 +565,7 @@
   },
   {
     "NAME": "REGION_MARGIN_RIGHT",
-    "DISPLAY_NAME": "Margin Right",
+    "DISPLAY_NAME": "------ Right",
     "DISPLAY_SEQUENCE": 903,
     "HELP_TEXT": "",
     "NULL_TEXT": "Default",
@@ -535,6 +615,470 @@
       }
     ]
   },
+  {
+    "NAME": "REGION_PADDING_TOP",
+    "DISPLAY_NAME": "Padding Top",
+    "DISPLAY_SEQUENCE": 910,
+    "HELP_TEXT": "",
+    "NULL_TEXT": "Default",
+    "IS_ADVANCED": "Y",
+    "TEMPLATE_OPTIONS": [
+      {
+        "NAME": "REGION_PADDING_TOP_0",
+        "DISPLAY_NAME": 0,
+        "DISPLAY_SEQUENCE": 0,
+        "CSS_CLASSES": "pt-0",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "REGION_PADDING_TOP_1",
+        "DISPLAY_NAME": 1,
+        "DISPLAY_SEQUENCE": 1,
+        "CSS_CLASSES": "pt-1",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "REGION_PADDING_TOP_2",
+        "DISPLAY_NAME": 2,
+        "DISPLAY_SEQUENCE": 2,
+        "CSS_CLASSES": "pt-2",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "REGION_PADDING_TOP_3",
+        "DISPLAY_NAME": 3,
+        "DISPLAY_SEQUENCE": 3,
+        "CSS_CLASSES": "pt-3",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "REGION_PADDING_TOP_4",
+        "DISPLAY_NAME": 4,
+        "DISPLAY_SEQUENCE": 4,
+        "CSS_CLASSES": "pt-4",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "REGION_PADDING_TOP_5",
+        "DISPLAY_NAME": 5,
+        "DISPLAY_SEQUENCE": 5,
+        "CSS_CLASSES": "pt-5",
+        "HELP_TEXT": ""
+      }
+    ]
+  },
+  {
+    "NAME": "REGION_PADDING_BOTTOM",
+    "DISPLAY_NAME": "------ Bottom",
+    "DISPLAY_SEQUENCE": 911,
+    "HELP_TEXT": "",
+    "NULL_TEXT": "Default",
+    "IS_ADVANCED": "Y",
+    "TEMPLATE_OPTIONS": [
+      {
+        "NAME": "REGION_PADDING_BOTTOM_0",
+        "DISPLAY_NAME": 0,
+        "DISPLAY_SEQUENCE": 0,
+        "CSS_CLASSES": "pb-0",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "REGION_PADDING_BOTTOM_1",
+        "DISPLAY_NAME": 1,
+        "DISPLAY_SEQUENCE": 1,
+        "CSS_CLASSES": "pb-1",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "REGION_PADDING_BOTTOM_2",
+        "DISPLAY_NAME": 2,
+        "DISPLAY_SEQUENCE": 2,
+        "CSS_CLASSES": "pb-2",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "REGION_PADDING_BOTTOM_3",
+        "DISPLAY_NAME": 3,
+        "DISPLAY_SEQUENCE": 3,
+        "CSS_CLASSES": "pb-3",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "REGION_PADDING_BOTTOM_4",
+        "DISPLAY_NAME": 4,
+        "DISPLAY_SEQUENCE": 4,
+        "CSS_CLASSES": "pb-4",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "REGION_PADDING_BOTTOM_5",
+        "DISPLAY_NAME": 5,
+        "DISPLAY_SEQUENCE": 5,
+        "CSS_CLASSES": "pb-5",
+        "HELP_TEXT": ""
+      }
+    ]
+  },
+  {
+    "NAME": "REGION_PADDING_LEFT",
+    "DISPLAY_NAME": "------ Left",
+    "DISPLAY_SEQUENCE": 912,
+    "HELP_TEXT": "",
+    "NULL_TEXT": "Default",
+    "IS_ADVANCED": "Y",
+    "TEMPLATE_OPTIONS": [
+      {
+        "NAME": "REGION_PADDING_LEFT_0",
+        "DISPLAY_NAME": 0,
+        "DISPLAY_SEQUENCE": 0,
+        "CSS_CLASSES": "pl-0",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "REGION_PADDING_LEFT_1",
+        "DISPLAY_NAME": 1,
+        "DISPLAY_SEQUENCE": 1,
+        "CSS_CLASSES": "pl-1",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "REGION_PADDING_LEFT_2",
+        "DISPLAY_NAME": 2,
+        "DISPLAY_SEQUENCE": 2,
+        "CSS_CLASSES": "pl-2",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "REGION_PADDING_LEFT_3",
+        "DISPLAY_NAME": 3,
+        "DISPLAY_SEQUENCE": 3,
+        "CSS_CLASSES": "pl-3",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "REGION_PADDING_LEFT_4",
+        "DISPLAY_NAME": 4,
+        "DISPLAY_SEQUENCE": 4,
+        "CSS_CLASSES": "pl-4",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "REGION_PADDING_LEFT_5",
+        "DISPLAY_NAME": 5,
+        "DISPLAY_SEQUENCE": 5,
+        "CSS_CLASSES": "pl-5",
+        "HELP_TEXT": ""
+      }
+    ]
+  },
+  {
+    "NAME": "REGION_PADDING_RIGHT",
+    "DISPLAY_NAME": "------ Right",
+    "DISPLAY_SEQUENCE": 913,
+    "HELP_TEXT": "",
+    "NULL_TEXT": "Default",
+    "IS_ADVANCED": "Y",
+    "TEMPLATE_OPTIONS": [
+      {
+        "NAME": "REGION_PADDING_RIGHT_0",
+        "DISPLAY_NAME": 0,
+        "DISPLAY_SEQUENCE": 0,
+        "CSS_CLASSES": "pr-0",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "REGION_PADDING_RIGHT_1",
+        "DISPLAY_NAME": 1,
+        "DISPLAY_SEQUENCE": 1,
+        "CSS_CLASSES": "pr-1",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "REGION_PADDING_RIGHT_2",
+        "DISPLAY_NAME": 2,
+        "DISPLAY_SEQUENCE": 2,
+        "CSS_CLASSES": "pr-2",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "REGION_PADDING_RIGHT_3",
+        "DISPLAY_NAME": 3,
+        "DISPLAY_SEQUENCE": 3,
+        "CSS_CLASSES": "pr-3",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "REGION_PADDING_RIGHT_4",
+        "DISPLAY_NAME": 4,
+        "DISPLAY_SEQUENCE": 4,
+        "CSS_CLASSES": "pr-4",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "REGION_PADDING_RIGHT_5",
+        "DISPLAY_NAME": 5,
+        "DISPLAY_SEQUENCE": 5,
+        "CSS_CLASSES": "pr-5",
+        "HELP_TEXT": ""
+      }
+    ]
+  },
+  {
+    "NAME": "REGION_BORDER",
+    "DISPLAY_NAME": "Border",
+    "DISPLAY_SEQUENCE": 950,
+    "HELP_TEXT": "Use border utilities to quickly style the border and border-radius of an element.",
+    "NULL_TEXT": "Default",
+    "IS_ADVANCED": "Y",
+    "TEMPLATE_OPTIONS": [
+      {
+        "NAME": "REGION_BORDER_ALL",
+        "DISPLAY_NAME": "All Sides",
+        "DISPLAY_SEQUENCE": 1,
+        "CSS_CLASSES": "border",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "REGION_BORDER_TOP",
+        "DISPLAY_NAME": "Top",
+        "DISPLAY_SEQUENCE": 2,
+        "CSS_CLASSES": "border-top",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "REGION_BORDER_BOTTOM",
+        "DISPLAY_NAME": "Bottom",
+        "DISPLAY_SEQUENCE": 3,
+        "CSS_CLASSES": "border-bottom",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "REGION_BORDER_RIGHT",
+        "DISPLAY_NAME": "Right",
+        "DISPLAY_SEQUENCE": 4,
+        "CSS_CLASSES": "border-right",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "REGION_BORDER_LEFT",
+        "DISPLAY_NAME": "Left",
+        "DISPLAY_SEQUENCE": 5,
+        "CSS_CLASSES": "border-left",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "REGION_BORDER_TOP_BOTTOM",
+        "DISPLAY_NAME": "Top & Bottom",
+        "DISPLAY_SEQUENCE": 6,
+        "CSS_CLASSES": "border-top border-bottom",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "REGION_BORDER_LEFT_RIGHT",
+        "DISPLAY_NAME": "Left & Right",
+        "DISPLAY_SEQUENCE": 7,
+        "CSS_CLASSES": "border-left border-right",
+        "HELP_TEXT": ""
+      }
+    ]
+  },
+  {
+    "NAME": "REGION_BORDER_STYLE",
+    "DISPLAY_NAME": "Border Style",
+    "DISPLAY_SEQUENCE": 951,
+    "HELP_TEXT": "Change the border color using utilities built on our theme colors.",
+    "NULL_TEXT": "Default",
+    "IS_ADVANCED": "Y",
+    "TEMPLATE_OPTIONS": [
+      {
+        "NAME": "REGION_BORDER_STYLE_PRIMARY",
+        "DISPLAY_NAME": "Primary",
+        "DISPLAY_SEQUENCE": 1,
+        "CSS_CLASSES": "border-primary",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "REGION_BORDER_STYLE_SECONDARY",
+        "DISPLAY_NAME": "Secondary",
+        "DISPLAY_SEQUENCE": 2,
+        "CSS_CLASSES": "border-secondary",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "REGION_BORDER_STYLE_SUCCESS",
+        "DISPLAY_NAME": "Success",
+        "DISPLAY_SEQUENCE": 3,
+        "CSS_CLASSES": "border-success",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "REGION_BORDER_STYLE_DANGER",
+        "DISPLAY_NAME": "Danger",
+        "DISPLAY_SEQUENCE": 4,
+        "CSS_CLASSES": "border-danger",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "REGION_BORDER_STYLE_WARNING",
+        "DISPLAY_NAME": "Warning",
+        "DISPLAY_SEQUENCE": 5,
+        "CSS_CLASSES": "border-warning",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "REGION_BORDER_STYLE_INFO",
+        "DISPLAY_NAME": "Info",
+        "DISPLAY_SEQUENCE": 6,
+        "CSS_CLASSES": "border-info",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "REGION_BORDER_STYLE_LIGHT",
+        "DISPLAY_NAME": "Light",
+        "DISPLAY_SEQUENCE": 7,
+        "CSS_CLASSES": "border-light",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "REGION_BORDER_STYLE_DARK",
+        "DISPLAY_NAME": "Dark",
+        "DISPLAY_SEQUENCE": 8,
+        "CSS_CLASSES": "border-dark",
+        "HELP_TEXT": ""
+      },
+      {
+        "NAME": "REGION_BORDER_STYLE_WHITE",
+        "DISPLAY_NAME": "White",
+        "DISPLAY_SEQUENCE": 9,
+        "CSS_CLASSES": "border-white",
+        "HELP_TEXT": ""
+      }
+    ]
+  },
+	{
+		"NAME": "REGION_TEXT_ALIGN_SM",
+		"DISPLAY_NAME": "Text Alignment - Small Screen",
+		"DISPLAY_SEQUENCE": 970,
+		"HELP_TEXT": "",
+		"NULL_TEXT": "Default",
+		"IS_ADVANCED": "Y",
+		"TEMPLATE_OPTIONS": [
+			{
+				"NAME": "REGION_TEXT_ALIGN_SM_LEFT",
+				"DISPLAY_NAME": "Left",
+				"DISPLAY_SEQUENCE": 1,
+				"CSS_CLASSES": "text-sm-left",
+				"HELP_TEXT": ""
+			},
+			{
+				"NAME": "REGION_TEXT_ALIGN_SM_CENTER",
+				"DISPLAY_NAME": "Center",
+				"DISPLAY_SEQUENCE": 2,
+				"CSS_CLASSES": "text-sm-center",
+				"HELP_TEXT": ""
+			},
+			{
+				"NAME": "REGION_TEXT_ALIGN_SM_RIGHT",
+				"DISPLAY_NAME": "Right",
+				"DISPLAY_SEQUENCE": 3,
+				"CSS_CLASSES": "text-sm-right",
+				"HELP_TEXT": ""
+			}
+		]
+	},
+	{
+		"NAME": "REGION_TEXT_ALIGN_MD",
+		"DISPLAY_NAME": "Text Alignment - Medium Screen",
+		"DISPLAY_SEQUENCE": 971,
+		"HELP_TEXT": "",
+		"NULL_TEXT": "Default",
+		"IS_ADVANCED": "Y",
+		"TEMPLATE_OPTIONS": [
+			{
+				"NAME": "REGION_TEXT_ALIGN_MD_LEFT",
+				"DISPLAY_NAME": "Left",
+				"DISPLAY_SEQUENCE": 1,
+				"CSS_CLASSES": "text-md-left",
+				"HELP_TEXT": ""
+			},
+			{
+				"NAME": "REGION_TEXT_ALIGN_MD_CENTER",
+				"DISPLAY_NAME": "Center",
+				"DISPLAY_SEQUENCE": 2,
+				"CSS_CLASSES": "text-md-center",
+				"HELP_TEXT": ""
+			},
+			{
+				"NAME": "REGION_TEXT_ALIGN_MD_RIGHT",
+				"DISPLAY_NAME": "Right",
+				"DISPLAY_SEQUENCE": 3,
+				"CSS_CLASSES": "text-md-right",
+				"HELP_TEXT": ""
+			}
+		]
+	},
+	{
+		"NAME": "REGION_TEXT_ALIGN_LG",
+		"DISPLAY_NAME": "Text Alignment - Large Screen",
+		"DISPLAY_SEQUENCE": 972,
+		"HELP_TEXT": "",
+		"NULL_TEXT": "Default",
+		"IS_ADVANCED": "Y",
+		"TEMPLATE_OPTIONS": [
+			{
+				"NAME": "REGION_TEXT_ALIGN_LG_LEFT",
+				"DISPLAY_NAME": "Left",
+				"DISPLAY_SEQUENCE": 1,
+				"CSS_CLASSES": "text-lg-left",
+				"HELP_TEXT": ""
+			},
+			{
+				"NAME": "REGION_TEXT_ALIGN_LG_CENTER",
+				"DISPLAY_NAME": "Center",
+				"DISPLAY_SEQUENCE": 2,
+				"CSS_CLASSES": "text-lg-center",
+				"HELP_TEXT": ""
+			},
+			{
+				"NAME": "REGION_TEXT_ALIGN_LG_RIGHT",
+				"DISPLAY_NAME": "Right",
+				"DISPLAY_SEQUENCE": 3,
+				"CSS_CLASSES": "text-lg-right",
+				"HELP_TEXT": ""
+			}
+		]
+	},
+	{
+		"NAME": "REGION_TEXT_ALIGN_XL",
+		"DISPLAY_NAME": "Text Alignment - XLarge Screen",
+		"DISPLAY_SEQUENCE": 973,
+		"HELP_TEXT": "",
+		"NULL_TEXT": "Default",
+		"IS_ADVANCED": "Y",
+		"TEMPLATE_OPTIONS": [
+			{
+				"NAME": "REGION_TEXT_ALIGN_XL_LEFT",
+				"DISPLAY_NAME": "Left",
+				"DISPLAY_SEQUENCE": 1,
+				"CSS_CLASSES": "text-xl-left",
+				"HELP_TEXT": ""
+			},
+			{
+				"NAME": "REGION_TEXT_ALIGN_XL_CENTER",
+				"DISPLAY_NAME": "Center",
+				"DISPLAY_SEQUENCE": 2,
+				"CSS_CLASSES": "text-xl-center",
+				"HELP_TEXT": ""
+			},
+			{
+				"NAME": "REGION_TEXT_ALIGN_XL_RIGHT",
+				"DISPLAY_NAME": "Right",
+				"DISPLAY_SEQUENCE": 3,
+				"CSS_CLASSES": "text-xl-right",
+				"HELP_TEXT": ""
+			}
+		]
+	},
   {
     "NAME": "REGION_VISIBILITY",
     "DISPLAY_NAME": "Visibility",
