--- a/src/scss/apex_variables/_groups.scss
+++ b/src/scss/apex_variables/_groups.scss
@@ -13,9 +13,14 @@
       "sequence": 2
     },
     {
-      "name": "Footer",
+      "name": "Body",
       "common": true,
       "sequence": 3
+    },
+    {
+      "name": "Footer",
+      "common": true,
+      "sequence": 4
     }
   ]
 }
