removes list align template option in favor of region alignment

--- a/templates/Lists/Standard.hbs
+++ b/templates/Lists/Standard.hbs
@@ -136,24 +136,10 @@
         "HELP_TEXT": ""
       },
       {
-        "NAME": "NAV_ALIGN_VERTICAL_LEFT",
-        "DISPLAY_NAME": "Vertical, Aligned Left",
+        "NAME": "NAV_ALIGN_VERTICAL",
+        "DISPLAY_NAME": "Vertical",
         "DISPLAY_SEQUENCE": 5,
-        "CSS_CLASSES": "flex-column text-left",
-        "HELP_TEXT": ""
-      },
-      {
-        "NAME": "NAV_ALIGN_VERTICAL_CENTER",
-        "DISPLAY_NAME": "Vertical, Aligned Center",
-        "DISPLAY_SEQUENCE": 6,
-        "CSS_CLASSES": "flex-column text-center",
-        "HELP_TEXT": ""
-      },
-      {
-        "NAME": "NAV_ALIGN_VERTICAL_RIGHT",
-        "DISPLAY_NAME": "Vertical, Aligned Right",
-        "DISPLAY_SEQUENCE": 7,
-        "CSS_CLASSES": "flex-column text-right",
+        "CSS_CLASSES": "flex-column",
         "HELP_TEXT": ""
       }
     ]
