--- a/src/scss/apex_components/_icons.scss
+++ b/src/scss/apex_components/_icons.scss
@@ -2,3 +2,10 @@
 .fa, .fa:before {
   vertical-align: baseline;
 }
+
+.a-Icon {
+    vertical-align: middle;
+    width: auto;
+    height: auto;
+    line-height: normal;
+}
