--- a/templates/Pages/Left and Right Side Columns.hbs
+++ b/templates/Pages/Left and Right Side Columns.hbs
@@ -218,5 +218,5 @@ apex.navigation.dialog(#PAGE_URL#,{title:#TITLE#,height:#DIALOG_HEIGHT#,width:#D
 {{/TEMPLATE_OPTIONS}}
 {{#DEFAULT_TEMPLATE_OPTIONS}}{{/DEFAULT_TEMPLATE_OPTIONS}}
 {{#PRESET_TEMPLATE_OPTIONS}}
-ft-page-body-container-fluid:ft-page-footer-container
+ft-page-body-container:ft-page-footer-container
 {{/PRESET_TEMPLATE_OPTIONS}}
