--- a/src/scss/apex_components/_icons.scss
+++ b/src/scss/apex_components/_icons.scss
@@ -9,3 +9,8 @@
     height: auto;
     line-height: normal;
 }
+
+.apex-icons-fontapex .fa {
+    font-family: inherit!important;
+    position: relative;
+}
