--- a/src/scss/_ft_components.scss
+++ b/src/scss/_ft_components.scss
@@ -1,5 +1,6 @@
 @import "apex_components/alerts";
 @import "apex_components/background";
+@import "apex_components/breadcrumb";
 @import "apex_components/buttons";
 @import "apex_components/cards";
 @import "apex_components/dropdowns";
@@ -15,6 +16,8 @@
 @import "apex_components/modals";
 @import "apex_components/nav";
 @import "apex_components/navbar";
+@import "apex_components/offcanvas";
+@import "apex_components/page_templates";
 @import "apex_components/paginations";
 @import "apex_components/tables";
 @import "apex_components/themeroller";
