--- a/templates/Lists/Navigation Menu Top.hbs
+++ b/templates/Lists/Navigation Menu Top.hbs
@@ -5,9 +5,9 @@
 
 {{#LIST_TEMPLATE_BEFORE_ROWS}}
 <button class="navbar-toggler order-0 d-lg-none mr-2" type="button" data-toggle="collapse" data-target="##LIST_ID#-content" aria-controls="#LIST_ID#-content" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
+  <span class="fa fa-bars" aria-hidden="true"></span>
 </button>
-<nav id="#LIST_ID#" class="#COMPONENT_CSS_CLASSES# navbar-expand-lg order-4 order-lg-1 col-12 col-lg-auto px-0">
+<nav id="#LIST_ID#" class="#COMPONENT_CSS_CLASSES# navbar-expand-lg order-4 order-lg-1 col-12 col-lg-auto px-0 text-sm-center text-md-left">
 <div class="collapse navbar-collapse" id="#LIST_ID#-content">
 <ul class="navbar-nav">
 {{/LIST_TEMPLATE_BEFORE_ROWS}}
